feat: telas de cursos

--- a/src/app/layout/header/header.component.html
+++ b/src/app/layout/header/header.component.html
@@ -20,6 +20,11 @@
             >Sobre</a
           >
           <a
+            routerLink="/courses"
+            class="text-gray-300 hover:text-white inline-flex items-center px-1 pt-1 text-sm font-medium cursor-pointer"
+            >Cursos</a
+          >
+          <a
             routerLink="/features"
             class="text-gray-300 hover:text-white inline-flex items-center px-1 pt-1 text-sm font-medium cursor-pointer"
             >Recursos</a
