--- a/src/app/layout/sidebar/sidebar.component.html
+++ b/src/app/layout/sidebar/sidebar.component.html
@@ -16,7 +16,7 @@
       <i class="bi bi-book mr-3"></i> Cursos
     </a>
     <a
-      routerLink="/home/meus-cursos"
+      routerLink="/courses/meus-cursos"
       class="block py-2.5 px-4 hover:bg-gray-700 transition duration-200"
     >
       <i class="bi bi-journal-text mr-3"></i> Meus Cursos
